# listen-to-wiki-changes

./: .gitignore  .gitlab-ci.yml  BOOKMARKS.md  LICENSE  Procfile  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  requirements.txt  wikimedias.csv
l2wc_api/: main.py  pyproject.toml
plans/: connection-lifecycle-analysis.md
web_app/: index.html  package-lock.json  vite.config.js
web_app/src/: App.vue  audio.js  composition.js  global_settings.js  rate_measure.js  relay_client_shared_worker.js  style.css
web_app/src/components/: About.vue  AudioVisualizer.vue  Header.vue  LanguagesSelector.vue  RecentChangesLog.vue  Settings.vue  VolumeSlider.vue
web_app/static/css/: style.css
