[project]
name = "listen-to-wiki-changes"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "click==8.1.8",
    "deptry==0.23.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi-cli==0.0.7",
    "fastapi[standard]==0.115.12",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "packaging==25.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "requirements-parser==0.13.0",
    "rich==14.0.0",
    "rich-toolkit==0.14.4",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
]

[tool.setuptools]
packages = ["l2wc_api"]
